<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSecondScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stringText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_Text_String"
        android:text="@string/stringButtonDes"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSecondScreen" />

    <EditText
        android:id="@+id/oneLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/string_1"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:autofillHints="@string/string_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stringText" />

    <EditText
        android:id="@+id/multipleLineText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_FiveLinesString"
        android:hint="@string/string_5"
        android:inputType="textMultiLine"
        android:maxLength="50"
        android:maxLines="5"
        android:autofillHints="@string/string_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneLineText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="@dimen/layout_width_Password"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:text="@string/passText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multipleLineText" />

    <EditText
        android:id="@+id/numberText"
        android:layout_width="@dimen/layout_width_NumberString"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_NumberString"
        android:hint="@string/number"
        android:inputType="number"
        android:maxLength="4"
        android:text="@string/numberText"
        android:autofillHints="@string/number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/multipleLineText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hideButton"
        android:text="@string/hide"
        style="@style/Hide_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberText" />

</androidx.constraintlayout.widget.ConstraintLayout>